--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -5,8 +5,8 @@ COPY poetry.lock .
 
 RUN apt-get update \
 && apt-get install -y --no-install-recommends \
-  gcc \
-  python3-dev gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev build-essential cmake python3-dev
-RUN pip install poetry && poetry config --local installer.no-binary :all: && poetry install --no-root \
-&& apt-get purge -y --auto-remove gcc \
-  python3-dev gfortran wget git g++ pkg-config libhdf5-dev cmake
+  gcc gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev build-essential cmake python3-dev
+RUN pip install poetry && poetry config --local installer.no-binary :all: && poetry config virtualenvs.create false  \
+    && poetry install --no-root \
+&& apt-get purge -y --auto-remove  \
+    gcc gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev build-essential cmake python3-dev
