--- a/docker/python3-ubi/Dockerfile
+++ b/docker/python3-ubi/Dockerfile
@@ -100,8 +100,8 @@ Options = UnsafeLegacyRenegotiation\n' > /tmp/ssl.cnf \
 
 RUN groupadd -g 4000 demisto && \
     useradd -u 4000 -g demisto demisto -s /bin/sh && \
-    pip uninstall setuptools -y && \
-    pip install setuptools>=70.3.0
+    dnf remove python3-setuptools -y && \
+    pip install --upgrade setuptools
 
 # when changing it make sure to change also PYTHON_VERSION_TO_INSTALL env var in line 23
 ENV PYTHON_VERSION="3.11.9"
