--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -5,8 +5,9 @@ COPY poetry.lock .
 
 RUN apt-get update \
 && apt-get install -y --no-install-recommends \
-  gcc gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev build-essential cmake python3-dev
-RUN pip install --upgrade setuptools && pip install poetry && poetry config --local installer.no-binary :all: && poetry config virtualenvs.create false  \
-    && poetry install --no-root \
+  gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev cmake
+RUN pip install --upgrade setuptools && pip install poetry && poetry config --local installer.no-binary :all: \
+&& poetry config virtualenvs.create false  \
+&& poetry install --no-root \
 && apt-get purge -y --auto-remove  \
-    gcc gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev build-essential cmake python3-dev
+  gfortran wget git autoconf libtool automake g++ pkg-config libhdf5-dev cmake
