--- a/docker/mlclustering/environment.yml
+++ b/docker/mlclustering/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - hdbscan==0.8.29
   - dill=0.3.8
   - joblib=1.4.2
-  - numpy=1.21.2
+  - numpy
   - pandas=1.2.4
   - python-dateutil=2.9.0.post0
   - pytz=2024.1
@@ -15,3 +15,6 @@ dependencies:
   - scipy=1.9.3
   - six=1.16.0
   - threadpoolctl=3.5.0
+  - dateparser
+  - requests
+  - python-dateutil
