--- a/.github/workflows/sync_native_dependency.yml
+++ b/.github/workflows/sync_native_dependency.yml
@@ -9,10 +9,10 @@ jobs:
     if: github.repository == 'demisto/dockerFiles'
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.11
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.11"
+          python-version: "3.*"
       - name: Install dependencies with pipenv
         run: |
           python -m pip install --upgrade pip
@@ -20,6 +20,4 @@ jobs:
           pipenv install
       - name: Run compare_dependency_constraints Script.
         run: |
-          ls
-          cd "$GITHUB_WORKSPACE"
           pipenv run python utils/compare_dependency_constraints.py
