Add json2html container

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -758,3 +758,7 @@ updates:
     directory: /docker/python3-9-deb
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/json2html
+    schedule:
+     interval: daily
