--- a/docker/xsoar-tools/Dockerfile
+++ b/docker/xsoar-tools/Dockerfile
@@ -3,15 +3,18 @@ FROM demisto/python3:3.11.9.103066
 ENV DEMISTO_SDK_IGNORE_CONTENT_WARNING true
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev openssl-dev wget \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev openssl-dev \
   && apk add --no-cache git  \
   && apk add --no-cache libstdc++  \
   && apk add --no-cache --upgrade grep  \
   && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies \
-  && wget -P /home/demisto https://raw.githubusercontent.com/demisto/content/master/Packs/Base/Scripts/CommonServerPython/CommonServerPython.py \
-  && wget -P /home/demisto https://raw.githubusercontent.com/demisto/content/master/Packs/Base/Scripts/CommonServerPowerShell/CommonServerPowerShell.ps1 \
-  && wget -P /home/demisto https://raw.githubusercontent.com/demisto/content/master/tox.ini \
-  && wget -P /home/demisto https://raw.githubusercontent.com/demisto/content/master/Tests/demistomock/demistomock.py \
-  && wget -P /home/demisto https://raw.githubusercontent.com/demisto/content/master/Tests/demistomock/demistomock.ps1 \
-  && wget -P /home/demisto https://raw.githubusercontent.com/demisto/content/master/Tests/scripts/dev_envs/pytest/conftest.py
+  && apk del .build-dependencies
+ADD https://raw.githubusercontent.com/demisto/content/master/Packs/Base/Scripts/CommonServerPython/CommonServerPython.py /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Packs/Base/Scripts/CommonServerPowerShell/CommonServerPowerShell.ps1 /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/tox.ini /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Tests/demistomock/demistomock.py /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Tests/demistomock/demistomock.ps1 /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Tests/scripts/dev_envs/pytest/conftest.py /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Tests/Marketplace/approved_usecases.json /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Tests/Marketplace/approved_tags.json /home/demisto
+ADD https://raw.githubusercontent.com/demisto/content/master/Tests/Marketplace/approved_categories.json /home/demisto
