--- a/docker/mlurlphishing/Dockerfile
+++ b/docker/mlurlphishing/Dockerfile
@@ -33,6 +33,7 @@ python3-dev \
   gcc \
   python3-dev \
   libxrender-dev \
-&& rm -rf /var/lib/apt/lists/*
+&& rm -rf /var/lib/apt/lists/* \
+&& pip install --upgrade setuptools
 
 
