--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -1,5 +1,5 @@
 # Last modified: 2024-07-21T00:00:00.000000+00:00
-FROM mcr.microsoft.com/powershell:7.4-ubuntu-20.04
+FROM mcr.microsoft.com/powershell:7.4-ubuntu-22.04
 
 # For the `no supported WSMan client library was found` error when using Ubuntu 20+
 RUN apt-get update -y
@@ -11,9 +11,9 @@ RUN apt update && apt install netbase -y
 RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 && rm -rf /var/lib/apt/lists/*
 
-# Set timezone to Etc/UTC for backwards comp. See: https://github.com/regebro/tzlocal/issues/101
-RUN echo 'Etc/UTC' > /etc/timezone \
-&& dpkg-reconfigure --frontend noninteractive tzdata
+# # Set timezone to Etc/UTC for backwards comp. See: https://github.com/regebro/tzlocal/issues/101
+# RUN echo 'Etc/UTC' > /etc/timezone \
+# && dpkg-reconfigure --frontend noninteractive tzdata
 
 RUN groupadd --gid 4000 demisto \
   && useradd --uid 4000 --gid demisto --shell /bin/bash --create-home demisto
