--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -12,6 +12,10 @@ RUN apt update && apt install netbase -y
 RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 && rm -rf /var/lib/apt/lists/*
 
+
+RUN sh -c "yes | pwsh -Command 'Update-Module -Name newtonsoft.json'"
+
+
 # Set timezone to Etc/UTC for backwards comp. See: https://github.com/regebro/tzlocal/issues/101
 RUN echo 'Etc/UTC' > /etc/timezone \
 && dpkg-reconfigure --frontend noninteractive tzdata
