--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -10,16 +10,12 @@ RUN apt-get update \
 
 ADD https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh minicondainstall.sh
 RUN chmod +x minicondainstall.sh && ./minicondainstall.sh -b -u -p ~/miniconda3 && ~/miniconda3/bin/conda --version
-ENV PATH=/root/miniconda3/bin/:$PATH
-RUN conda init bash
-SHELL ["/bin/bash", "-l", "-c"]
-RUN conda env create -f environment.yml && conda activate clusteringenv && \
-    conda list --export > /tmp/conda_packages.txt && \
-    mkdir -p /tmp/pkgs && \
-    conda install --download-only -n clusteringenv -c conda-forge --copy -d /tmp/pkgs --file /tmp/conda_packages.txt
-
-# Extract the downloaded packages
-RUN cd /tmp/pkgs && \
+RUN ~/miniconda3/bin/conda init bash && . ~/.bashrc && ~/miniconda3/bin/conda env create -f environment.yml  \
+    && ~/miniconda3/bin/conda activate clusteringenv \
+    && ~/miniconda3/bin/conda list --export > /tmp/conda_packages.txt \
+&& mkdir -p /tmp/pkgs \
+&& ~/miniconda3/bin/conda install --download-only -n clusteringenv -c conda-forge --copy -d /tmp/pkgs --file /tmp/conda_packages.txt && \
+    cd /tmp/pkgs && \
     for pkg in *.tar.bz2; do tar -xvjf "$pkg"; done
 
 # Install the dependencies to the system interpreter using pip
