--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update \
 
 ADD https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh minicondainstall.sh
 RUN chmod +x minicondainstall.sh && ./minicondainstall.sh -b -u -p ~/miniconda3 && ~/miniconda3/bin/conda --version
-RUN ~/miniconda3/bin/conda init bash && . ~/.bashrc && ~/miniconda3/bin/conda env create -f environment.yml  \
+SHELL ["/bin/bash", "-c"]
+RUN ~/miniconda3/bin/conda init bash && source ~/.bashrc && ~/miniconda3/bin/conda env create -f environment.yml  \
     && ~/miniconda3/bin/conda activate clusteringenv \
     && ~/miniconda3/bin/conda list --export > /tmp/conda_packages.txt \
 && mkdir -p /tmp/pkgs \
