lock rtfde to 0.0.2

--- a/docker/parse-emails/pyproject.toml
+++ b/docker/parse-emails/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.11"
 parse-emails = "*"
-rtfde = "*"
+rtfde = "0.0.2"
 
 
 [build-system]
