--- a/docker/parse-emails/pyproject.toml
+++ b/docker/parse-emails/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.11"
 parse-emails = "*"
-rtfde = "0.0.2"
+rtfde = "==0.0.2" # see https://github.com/seamustuohy/RTFDE/issues/33 and XSUP-39649
 
 
 [build-system]
