--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -13,8 +13,8 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 && rm -rf /var/lib/apt/lists/*
 
 
-RUN sh -c "yes | pwsh -Command 'Uninstall-Module -Name -Force newtonsoft.json'"
-RUN pwsh -Command 'Uninstall-Module -Name newtonsoft.json -Force'
+RUN sh -c "yes | pwsh -Command 'Uninstall-Module -Force -Name newtonsoft.json'"
+RUN pwsh -Command 'Uninstall-Module -Force -Name newtonsoft.json'
 
 # RUN sh -c "yes | pwsh -Command 'Install-Module -Name newtonsoft.json -MinimumVersion 13.0.1'"
 
