--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -18,6 +18,11 @@ RUN sh -c "yes | pwsh -Command 'Uninstall-Module -Force -Name newtonsoft.json'"
 
 # RUN sh -c "yes | pwsh -Command 'Install-Module -Name newtonsoft.json -MinimumVersion 13.0.1'"
 
+
+pwsh -command 'Install-Module -Force -Name newtonsoft.json -MinimumVersion 13.0.1'
+pwsh -command 'Import-Module -Name newtonsoft.json MinimumVersion 13.0.1'
+
+
 # Set timezone to Etc/UTC for backwards comp. See: https://github.com/regebro/tzlocal/issues/101
 RUN echo 'Etc/UTC' > /etc/timezone \
 && dpkg-reconfigure --frontend noninteractive tzdata
