--- a/docker/mlclustering/environment.yml
+++ b/docker/mlclustering/environment.yml
@@ -4,10 +4,10 @@ channels:
 dependencies:
   - python=3.9
   - cython=0.29.23
-  - hdbscan==0.8.27
+  - hdbscan=0.8.27
   - dill=0.3.8
   - joblib=1.4.2
-  - numpy
+  - numpy=1.20.2
   - pandas=1.2.4
   - python-dateutil=2.9.0.post0
   - pytz=2024.1
