--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update -y
 RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
 RUN pwsh -Command 'Install-WSMan'
 
-RUN pwsh -command 'Install-Package Newtonsoft.Json'
+# RUN pwsh -command 'Install-Package Newtonsoft.Json'
 RUN pwsh -command 'Update-Package Newtonsoft.Json'
 
 
