--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -6,8 +6,8 @@ RUN apt-get update -y
 RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
 RUN pwsh -Command 'Install-WSMan'
 
-# RUN pwsh -command 'Install-Package Newtonsoft.Json'
-RUN pwsh -command 'Update-Package -Id newtonsoft.json'
+RUN sh -c "yes | pwsh -Command 'Install-Module -Name newtonsoft.json'"
+RUN pwsh -Command 'Install-newtonsoft.json'
 
 
 RUN apt update && apt install netbase -y
