--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -6,11 +6,8 @@ RUN apt-get update -y
 RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
 RUN pwsh -Command 'Install-WSMan'
 
-# RUN sh -c "yes | pwsh -Command 'Install-Module -Name newtonsoft.json -RequiredVersion 13.0.1'"
-# RUN sh -c "yes | pwsh -Command 'Install-Package newtonsoft.json'"
-
-
-RUN sh -c "yes | pwsh -Command 'dotnet remove package newtonsoft.json'"
+RUN sh -c "yes | pwsh -Command 'Install-Module -Name newtonsoft.json -RequiredVersion 13.0.1'"
+RUN sh -c "yes | pwsh -Command 'Install-Package newtonsoft.json -ProviderName NuGet'"
 
 
 RUN apt update && apt install netbase -y
