--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -10,7 +10,7 @@ RUN pwsh -Command 'Install-WSMan'
 # RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name newtonsoft.json -ProviderName NuGet'"
 
 RUN sh -c "y | pwsh -Command 'Install-Package -Name newtonsoft.json -ProviderName NuGet -RequiredVersion 13.0.1'"
-
+RUN sh -c "y | pwsh -Command 'Install-Package -Name newtonsoft.json -ProviderName PowerShellGet -RequiredVersion 13.0.1'"
 
 RUN apt update && apt install netbase -y
 # Upgrade all packages to latest
