--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -3,6 +3,10 @@ FROM mcr.microsoft.com/powershell:7.4-ubuntu-20.04
 
 # For the `no supported WSMan client library was found` error when using Ubuntu 20+
 RUN apt-get update -y
+
+
+RUN sh -c "y | pwsh -Command 'Install-Package -Name newtonsoft.json -ProviderName NuGet -RequiredVersion 13.0.1'"
+
 RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
 RUN pwsh -Command 'Install-WSMan'
 
@@ -10,8 +14,8 @@ RUN pwsh -Command 'Install-WSMan'
 # RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name newtonsoft.json -ProviderName NuGet'"
 
 RUN sh -c "y | pwsh -Command 'Install-Package -Name newtonsoft.json -ProviderName NuGet -RequiredVersion 13.0.1'"
-RUN sh -c "y | pwsh -Command 'Get-Package -Name newtonsoft.json -RequiredVersion 12.0.3 -ProviderName NuGet | Uninstall-Package'"
-
+# RUN sh -c "y | pwsh -Command 'Get-Package -Name newtonsoft.json -RequiredVersion 12.0.3 -ProviderName NuGet | Uninstall-Package'"
+#
 
 
 
