--- a/docker/py3-native/pyproject.toml
+++ b/docker/py3-native/pyproject.toml
@@ -52,7 +52,7 @@ requests-ntlm = "==1.1.0"
 oauth2client = "*"
 dill = "*"
 packaging = "*"
-rtfde = "*"
+rtfde = "==0.0.2" # see https://github.com/seamustuohy/RTFDE/issues/33 and XSUP-39649
 webdriver-manager = "*"
 selenium = "*"
 cymruwhois = "*"
