--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -44,9 +44,11 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 
 
 RUN /bin/sh -c sh -c "y | pwsh -Command 'Uninstall-Package -Name newtonsoft.json -ProviderName NuGet'"
-RUN /bin/sh -c sh -c "y | pwsh -Command 'Uninstall-Package -Name system.formats.asn1 -ProviderName NuGet'"
 
 
+RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1 -ProviderName NuGet'"
+
+RUN sh -c "yes | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
 
 
 
