install system.formats.asn1

--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -46,6 +46,11 @@ RUN /bin/sh -c sh -c "y | pwsh -Command 'Uninstall-Package -Name newtonsoft.json
 RUN /bin/sh -c sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1 -ProviderName NuGet'"
 RUN /bin/sh -c sh -c "yes | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
 RUN /bin/sh -c sh -c "yes | pwsh -Command 'Uninstall-Module -Name system.formats.asn1 -AllVersions'"
+RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Module -Name system.formats.asn1 -AllVersions'"
+
+
+
+RUN /bin/sh -c "yes | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
 
 # Uninstall-Package: No package found for 'system.formats.asn1'.
 # RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1 -ProviderName NuGet'"
@@ -54,8 +59,6 @@ RUN /bin/sh -c sh -c "yes | pwsh -Command 'Uninstall-Module -Name system.formats
 #RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1'"
 
 
-
-RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Module -Name system.formats.asn1 -AllVersions'"
 
 
 # Set timezone to Etc/UTC for backwards comp. See: https://github.com/regebro/tzlocal/issues/101
