--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -50,7 +50,7 @@ RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Module -Name system.formats.asn1 
 
 
 
-RUN /bin/sh -c "yes | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
+RUN /bin/sh -c "y | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
 
 # Uninstall-Package: No package found for 'system.formats.asn1'.
 # RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1 -ProviderName NuGet'"
