--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -44,8 +44,6 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 
 
 
-RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1'"
-RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name newtonsoft.json'"
 
 
 # build passed
@@ -57,13 +55,25 @@ RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Module -Name system.formats.asn1 
 
 
 
-RUN /bin/sh -c "y | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
+RUN sh -c "y | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
+
+
+
+# RUN /bin/sh -c "y | pwsh -Command 'Install-Package -Name system.formats.asn1 -ProviderName NuGet -RequiredVersion 8.0.1'"
+
+
+
+
+
 
 # Uninstall-Package: No package found for 'system.formats.asn1'.
 # RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1 -ProviderName NuGet'"
 
 # Uninstall-Package: No package found for 'system.formats.asn1
 #RUN /bin/sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1'"
+
+# Uninstall-Package: No package found for 'system.formats.asn1
+RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name system.formats.asn1'"
 
 
 
