Add dependency for py3-tools

--- a/docker/py3-tools/pyproject.toml
+++ b/docker/py3-tools/pyproject.toml
@@ -54,6 +54,7 @@ pycryptodome = "*"
 requests-toolbelt = "*"
 urllib3 = "^2.2.2"
 pydantic = ">=2.7.1"
+json2html = "*"
 
 [build-system]
 requires = ["poetry-core"]
