--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -1,13 +1,18 @@
 # Last modified: 2023-11-17T00:12:42.649505+00:00
-FROM mcr.microsoft.com/powershell:7.4-ubuntu-22.04
+FROM mcr.microsoft.com/powershell:7.4-ubuntu-20.04
 
 # For the `no supported WSMan client library was found` error when using Ubuntu 20+
 RUN apt-get update -y
 
 
-RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
-RUN pwsh -Command 'Install-WSMan'
+# RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
+# RUN pwsh -Command 'Install-WSMan'
 
+
+
+
+
+#
 # RUN sh -c "yes | pwsh -Command 'Install-Module -Name newtonsoft.json -RequiredVersion 13.0.1'"
 # RUN sh -c "yes | pwsh -Command 'Uninstall-Package -Name newtonsoft.json -ProviderName NuGet'"
 
@@ -17,7 +22,7 @@ RUN pwsh -Command 'Install-WSMan'
 
 
 
-RUN apt update && apt install netbase tzdata -y
+RUN apt update && apt install netbase -y
 # Upgrade all packages to latest
 RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 && rm -rf /var/lib/apt/lists/*
