--- a/docker/ansible-runner/pyproject.toml
+++ b/docker/ansible-runner/pyproject.toml
@@ -35,7 +35,7 @@ azure-mgmt-marketplaceordering = "==0.1.0"
 azure-mgmt-monitor = "==0.5.2"
 azure-mgmt-managedservices = "==1.0.0"
 azure-mgmt-managementgroups = "==0.2.0"
-azure-mgmt-network = "==25.4.0"
+azure-mgmt-network = "==13.0.0"
 azure-mgmt-nspkg = "==2.0.0"
 azure-mgmt-privatedns = "==0.1.0"
 azure-mgmt-redis = "==14.4.0"
@@ -62,7 +62,9 @@ azure-mgmt-iothub = "==0.7.0"
 azure-mgmt-recoveryservices = "==3.0.0"
 azure-mgmt-recoveryservicesbackup = "==0.15.0"
 azure-mgmt-eventhub = "==2.0.0"
+azure-core = "==1.24.2"
 requests-ntlm = "~=1.1.0"
+requests = "==2.27.1"
 PyYAML = "*"
 python = "~3.11"
 
