install azure-storage-blob

--- a/docker/ansible-runner/Dockerfile
+++ b/docker/ansible-runner/Dockerfile
@@ -12,8 +12,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   openssh-client \
 && pip install --no-cache-dir -r requirements.txt \
 && pip install https://github.com/vmware/vsphere-automation-sdk-python/archive/refs/tags/v7.0.3.2.tar.gz \
-&& pip3 install azure-storage-blob --upgrade \
-&& pip install azure-storage-blob --upgrade \
+&& pip uninstall azure-storage -y \
+&& pip uninstall azure-storage-blob -y \
+&& pip install azure-storage-blob \
 && apt-get purge -y --auto-remove \
   gcc \
   python3-dev \
