--- a/docker/ansible-runner/pyproject.toml
+++ b/docker/ansible-runner/pyproject.toml
@@ -18,6 +18,7 @@ openshift = "~=0.13.1"
 kubernetes = "~=12.0.1"
 dnspython = "~=2.6.1"
 footmark = "~=1.20.0"
+azure-storage-blob = "==12.21.0"
 azure-cli-core = "==2.61.0"
 azure-cli-nspkg = "==3.0.2"
 azure-common = "==1.1.28"
