pip install upgrade

--- a/docker/ansible-runner/Dockerfile
+++ b/docker/ansible-runner/Dockerfile
@@ -12,8 +12,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   openssh-client \
 && pip install --no-cache-dir -r requirements.txt \
 && pip install https://github.com/vmware/vsphere-automation-sdk-python/archive/refs/tags/v7.0.3.2.tar.gz \
-&& pip uninstall azure-storage-blob -y \
-&& pip install azure-storage-blob \
+# && pip uninstall azure-storage-blob -y \
+# && pip install azure-storage-blob \
+&& pip install --upgrade azure-storage-blob \
 && pip install -r /usr/local/lib/python3.11/site-packages/ansible_collections/azure/azcollection/requirements.txt \
 && apt-get purge -y --auto-remove \
   gcc \
