--- a/docker/ansible-runner/pyproject.toml
+++ b/docker/ansible-runner/pyproject.toml
@@ -21,6 +21,7 @@ footmark = "~=1.20.0"
 azure-cli-core = "==2.61.0"
 azure-cli-nspkg = "==3.0.2"
 azure-common = "==1.1.28"
+azure-identity = "==1.16.1"
 azure-mgmt-apimanagement = "==0.2.0"
 azure-mgmt-authorization = "==0.51.1"
 azure-mgmt-batch = "==5.0.1"
