|Added Docker file to integrate with Group-IB

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -762,3 +762,7 @@ updates:
     directory: /docker/cyberchef
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/group-ib-integrations
+    schedule:
+     interval: daily
