Update Dockerfile -  delete build-base

--- a/docker/slackv3/Dockerfile
+++ b/docker/slackv3/Dockerfile
@@ -3,12 +3,11 @@ FROM demisto/python3-deb:3.11.9.105370
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y --no-install-recommends python3-dev build-base libffi-dev wget git \
+RUN apt-get update && apt-get install -y --no-install-recommends python3-dev libffi-dev wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && apt-get purge -y --auto-remove \
   gcc \
   python3-dev \
-  build-base \
   libffi-dev \
   wget \
   git \ 
