--- a/docker/powershell-teams/Dockerfile
+++ b/docker/powershell-teams/Dockerfile
@@ -2,3 +2,5 @@
 FROM demisto/powershell-ubuntu:7.4.1.86201
 
 RUN pwsh -c "Install-Module MicrosoftTeams -Force"
+RUN pwsh -c "Uninstall-Module -Name system.text.regularexpressions -AllVersions -Force"
+RUN pwsh -c "Remove-Module -Name system.text.regularexpressions -Force"
