remove webkit2gtk3-jsc

--- a/docker/py3-tools-ubi/Dockerfile
+++ b/docker/py3-tools-ubi/Dockerfile
@@ -5,7 +5,7 @@ COPY requirements.txt .
 
 RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git && \
         pip install --no-cache-dir -r requirements.txt && \
-        dnf remove -y python3-devel gcc gcc-c++ make wget git platform-python-pip && \
+        dnf remove -y python3-devel gcc gcc-c++ make wget git platform-python-pip webkit2gtk3-jsc && \
         dnf clean all && \
         rm -rf /var/cache/dnf
 
