native image code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,8 +4,100 @@
 /docker/*.json @glicht @anara123
 /docker/verify_licenses.py @glicht @anara123
 
+/docker/demisto-sdk/ @samuelFain
+
+# Supported docker images by native image
+
 /docker/py3-native/Dockerfile @shmuel44
 /docker/py3-native/pyproject.toml @shmuel44
 /docker/py3-native/README.md @shmuel44
 
-/docker/demisto-sdk/ @samuelFain
+docker/python3/Pipfile @shmuel44
+docker/python3/Dockerfile @shmuel44
+
+docker/python3-deb/Pipfile @shmuel44
+docker/python3-deb/Dockerfile @shmuel44
+
+docker/python3-ubi/Pipfile @shmuel44
+docker/python3-ubi/Dockerfile @shmuel44
+
+docker/py3-tools/pyproject.toml @shmuel44
+docker/py3-tools/Dockerfile @shmuel44
+
+docker/py3-tools-ubi/pyproject.toml @shmuel44
+docker/py3-tools-ubi/Dockerfile @shmuel44
+
+docker/crypto/Pipfile @shmuel44
+docker/crypto/Dockerfile @shmuel44
+
+docker/readpdf/Pipfile @shmuel44
+docker/readpdf/Dockerfile @shmuel44
+
+docker/parse-emails/pyproject.toml @shmuel44
+docker/parse-emails/Dockerfile @shmuel44
+
+docker/docxpy/Pipfile @shmuel44
+docker/docxpy/Dockerfile @shmuel44
+
+docker/sklearn/Pipfile @shmuel44
+docker/sklearn/Dockerfile @shmuel44
+
+docker/pandas/Pipfile @shmuel44
+docker/pandas/Dockerfile @shmuel44
+
+docker/ippysocks-py3/Pipfile @shmuel44
+docker/ippysocks-py3/Dockerfile @shmuel44
+
+docker/oauthlib/Pipfile @shmuel44
+docker/oauthlib/Dockerfile @shmuel44
+
+docker/unzip/Pipfile @shmuel44
+docker/unzip/Dockerfile @shmuel44
+
+docker/py3ews/Pipfile @shmuel44
+docker/py3ews/Dockerfile @shmuel44
+
+docker/taxii2/Pipfile @shmuel44
+docker/taxii2/Dockerfile @shmuel44
+
+docker/pan-os-python/Pipfile @shmuel44
+docker/pan-os-python/Dockerfile @shmuel44
+
+docker/slackv3/Pipfile @shmuel44
+docker/slackv3/Dockerfile @shmuel44
+
+docker/google-api-py3/Pipfile @shmuel44
+docker/google-api-py3/Dockerfile @shmuel44
+
+docker/slackv3/Pipfile @shmuel44
+docker/slackv3/Dockerfile @shmuel44
+
+docker/boto3py3/Pipfile @shmuel44
+docker/boto3py3/Dockerfile @shmuel44
+
+docker/pyjwt3/Pipfile @shmuel44
+docker/pyjwt3/Dockerfile @shmuel44
+
+docker/joe-security/Pipfile @shmuel44
+docker/joe-security/Dockerfile @shmuel44
+
+docker/slack/Pipfile @shmuel44
+docker/slack/Dockerfile @shmuel44
+
+docker/office-utils/Pipfile @shmuel44
+docker/office-utils/Dockerfile @shmuel44
+
+docker/chromium/Pipfile @shmuel44
+docker/chromium/Dockerfile @shmuel44
+
+docker/tesseract/Pipfile @shmuel44
+docker/tesseract/Dockerfile @shmuel44
+
+docker/netutils/Pipfile @shmuel44
+docker/netutils/Dockerfile @shmuel44
+
+docker/auth-utils/pyproject.toml @shmuel44
+docker/auth-utils/Dockerfile @shmuel44
+
+
+#### End native image
