--- a/docker/py3-native/Dockerfile
+++ b/docker/py3-native/Dockerfile
@@ -1,4 +1,4 @@
-FROM demisto/py3-tools-ubi:1.0.0.104082
+FROM devdemisto/py3-tools-ubi:1.0.0.105948
 
 
 
@@ -62,7 +62,7 @@ RUN dnf update --nodocs -y  \
     do python tessdata_downloader/tessdata_downloader.py -o /usr/local/share/tessdata/ -l $lang; done \
     && tesseract --version --list-langs \
     && rm -rf tessdata_downloader leptonica tesseract download_chromedriver.sh repos \
-    && dnf remove -y python3-devel gcc gcc-c++ make platform-python-pip jq unzip git make autoconf automake libtool libpng-devel libjpeg-devel libtiff-devel zlib-devel giflib-devel \
+    && dnf remove -y python3-devel gcc gcc-c++ make platform-python-pip jq unzip git make autoconf automake libtool libpng-devel libjpeg-devel libtiff-devel zlib-devel giflib-devel webkit2gtk3-jsc bind-libs.x86_64 polkit polkit-libs \
     && dnf clean all \
     && rm -rf /var/cache/dnf
 
