devdemisto/py3-tools-ubi:1.0.0.105859

--- a/docker/py3-tools-ubi/Dockerfile
+++ b/docker/py3-tools-ubi/Dockerfile
@@ -1,11 +1,11 @@
 # Last modified: 2024-07-18T00:00:00.000000+00:00
-FROM demisto/python3-ubi:3.11.9.103844
+FROM devdemisto/py3-tools-ubi:1.0.0.105859
 
 COPY requirements.txt .
 
 RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git && \
         pip install --no-cache-dir -r requirements.txt && \
-        dnf remove -y python3-devel gcc gcc-c++ make wget git platform-python-pip webkit2gtk3-jsc && \
+        dnf remove -y python3-devel gcc gcc-c++ make wget git platform-python-pip && \
         dnf clean all && \
         rm -rf /var/cache/dnf
 
