--- a/docker/py3-tools-ubi/pyproject.toml
+++ b/docker/py3-tools-ubi/pyproject.toml
@@ -50,6 +50,7 @@ pycryptodome = "*"
 requests-toolbelt = "*"
 certifi = "*"
 pyzipper = "*"
+json2html = "*"
 
 [build-system]
 requires = ["poetry-core"]
